--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 asgiref==3.11.0
 beautifulsoup4==4.14.3
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 colorama==0.4.6
+curl_cffi==0.13.0
 DateTime==6.0
 deflateBR==0.2.1
 Django==5.2.8
+frozendict==2.4.7
 idna==3.11
+multitasking==0.0.12
 numpy==2.3.5
 pandas==2.3.3
+peewee==3.18.3
+platformdirs==4.5.0
+protobuf==6.33.1
 psycopg2-binary==2.9.11
+pycparser==2.23
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
@@ -21,4 +29,6 @@ tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+websockets==15.0.1
+yfinance==0.2.66
 zope.interface==8.1.1
