--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.12.0
 asgiref==3.11.0
 beautifulsoup4==4.14.3
 certifi==2025.11.12
@@ -7,25 +9,35 @@ colorama==0.4.6
 curl_cffi==0.13.0
 DateTime==6.0
 deflateBR==0.2.1
+distro==1.9.0
 Django==5.2.8
 frozendict==2.4.7
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
+jiter==0.12.0
 multitasking==0.0.12
 numpy==2.3.5
+openai==2.8.1
 pandas==2.3.3
 peewee==3.18.3
 platformdirs==4.5.0
 protobuf==6.33.1
 psycopg2-binary==2.9.11
 pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
 requests==2.32.5
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.8
 sqlparse==0.5.3
 tqdm==4.67.1
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
